<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary">

        <TextView
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"

            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="22dp" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/userLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/slide_desc" />

        <EditText
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLines="1"
            android:padding="5dp"


            android:id="@+id/edtUsername"
            android:layout_width="200dp"
            android:layout_height="wrap_content"></EditText>


    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/slide_desc" />

        <EditText
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLines="1"
            android:padding="5dp"
            android:id="@+id/edtName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"></EditText>


    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/email_id"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/slide_desc" />

        <EditText
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLines="1"
            android:padding="5dp"
            android:id="@+id/edtEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"></EditText>


    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="Phone no"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/slide_desc" />

        <EditText
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLines="1"
            android:padding="5dp"
            android:id="@+id/edtPhone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"></EditText>


    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/slide_desc" />

        <EditText
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLines="1"
            android:padding="5dp"
            android:id="@+id/edtLocation"
            android:layout_width="200dp"
            android:layout_height="wrap_content"></EditText>


    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/country"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/slide_desc" />

        <EditText
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLines="1"
            android:padding="5dp"
            android:id="@+id/edtCountry"
            android:layout_width="200dp"
            android:layout_height="wrap_content"></EditText>


    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="50dp"
            android:text="@string/state"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/slide_desc" />

        <EditText
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLines="1"
            android:padding="5dp"
            android:id="@+id/edtState"
            android:layout_width="200dp"
            android:layout_height="wrap_content"></EditText>


    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/password"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/slide_desc" />

        <EditText
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLines="1"
            android:padding="5dp"
            android:id="@+id/edtPass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"></EditText>


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingLeft="20dp"

            android:text="@string/confirm_password"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/slide_desc" />

        <EditText
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:maxLines="1"
            android:padding="5dp"
            android:id="@+id/edtConfPass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"></EditText>


    </LinearLayout>

    <Button
        android:layout_gravity="center"
        android:id="@+id/btnRegister"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="#FFF"
        android:paddingEnd="80dp"
        android:paddingStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnGetStarted"
        android:text="@string/register"
        android:background="@drawable/btn_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></Button>
</LinearLayout>